src/styles/screen-export.less
.screen.export {
  .area.left {
    top: 0;
    left: 0;
    bottom: 25px;
    width: 290px;
    background: @dark;
    border-top: 1px solid @dark;
    border-right: 1px solid @dark;
    border-left: 1px solid @dark;

    & > div {
      background: @light;
      width: 287px;
      height: 100%;
    }

    h6 {
      float: left;
      width: 8em;
    }

    ul {
      float: left;
      width: ~"calc(100% - 8em)";
    }

    input[type="radio"] {
      margin-right: 7px;
    }

    input[type="range"] {
      position: relative;
      top: 3px;
      margin-right: 5px;
    }

    input[type="number"] {
      position: relative;
      top: 2px;
    }

    i {
      position: relative;
      top: 4px;
    }

    .animation-info {
      padding-left: 22px;
      float: left;
    }

    .button {
      width: ~"calc(100% - 20px)";
      margin-left: 10px;
      font-size: 1.4em;
      padding: 0.5em;
      .linear-gradient(green, darkgreen);
      border: 1px solid darken(darkgreen, 10%);

      &:after {
        border-top: 1px solid lighten(green, 10%);
      }
    }

    .colorswatch {
      position: relative;
      top: -3px;
    }

    .color-picker {
      position: absolute;
      z-index: 1;
    }
  }

  .area.right {
    top: 0;
    right: 0;
    bottom: 25px;
    left: 290px;
    background: @dark;
    border-top: 1px solid @dark;
    border-right: 1px solid @dark;
  }

  .area.left:after {
    background: none;
    width: 0;
    border-left: 1px solid #3a3a3a;
    border-right: 1px solid #2d2d2d;
    content: "";
    display: block;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    pointer-events: none;
  }

  #ExportPreviewBox {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;

    h5 {
      background: none;
    }

    .inner {
      position: absolute;
      top: 40px;
      left: 0;
      right: 0;
      bottom: 0;
      text-align: center;
      overflow: auto;
    }

    .preview {
      margin: 10px auto;
      background-color: #fff;
      box-shadow: 3px 3px 5px 2px rgba(0, 0, 0, 0.25);
    }
  }

  .statusbar {
    border: none;
  }

  .bar {
    padding: 0 10px;
  }
}

